--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" type="module"></script>
     <style>
         body {
             margin: 0 auto;
@@ -47,6 +48,5 @@
         <input type="text" id="room-input">
         <button type="button" id="room-button">Join</button>
     </form>
-    <script src="script.js"></script>
 </body>
 </html>
